# context-engine

./: README.md  example.context-engine.yaml  pyproject.toml
docs/explanation/: architecture.md  philosophy.md
docs/how-to/: configure-project.md  installation.md
docs/reference/: configuration-schema.md  workflow-commands.md
docs/tutorials/: getting-started.md
src/context_engine/: __init__.py  config.py  server.py  templates.py
tests/: __init__.py  test_server.py
workflows/: accept.md  architect.md  audit.md  collaborate.md  execute-task.md  finish.md  forge.md  init.md  next-task.md  plan.md  refine.md  review.md  start.md  summarize.md
